--- a/app/views/catalog/_show_default.html.erb
+++ b/app/views/catalog/_show_default.html.erb
@@ -1,20 +1,34 @@
 <%# default partial to display solr document fields in catalog show view -%>
 <dl class="dl-horizontal dl-invert">
 <%
+doctype = document["doctype_s"] || "bib"
 holdings = {
   "onl" => [],
   "lib" => [],
 }
-document_show_fields(document).each do |field_name, field|
-  if should_render_show_field? document, field
-    if field_name == "lib" || field_name == "onl"
+if doctype == "flower"
+-%>
+<%=
+  render partial: "show_flower", locals: {document: document}
+-%>
+<%
+else
+  document_show_fields(document).each do |field_name, field|
+    if should_render_show_field? document, field
+      if field_name == "lib" || field_name == "onl"
         holdings[field_name] = document[field_name]
-    else -%>
-      <dt class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_label document, field: field_name %></dt>
-      <dd class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_value document, field: field_name %></dd>
-<%  end
+      else
+-%>
+        <dt class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_label document, field: field_name %></dt>
+        <dd class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_value document, field: field_name %></dd>
+<%
+      end
+    end
   end
-end %>
+-%>
 </dl>
 <hr/>
 <%= render partial: "show_holdings", locals: {document: document, holdings: holdings} %>
+<%
+end
+%>
