--- a/app/views/catalog/_show_default.html.erb
+++ b/app/views/catalog/_show_default.html.erb
@@ -12,6 +12,22 @@ if doctype == "flower"
   render partial: "show_flower", locals: {document: document}
 -%>
 <%
+elsif doctype == "resvlist"
+  document_show_fields(document).each do |field_name, field|
+    if should_render_show_field? document, field
+-%>
+        <dt class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_label document, field: field_name %></dt>
+        <dd class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_value document, field: field_name %></dd>
+<%
+    end
+  end
+-%>
+<dt>Items:</dt>
+<dd>
+<a href="http://example.com/">Textbook of bad examples</a> / by Ulysses Fishwick. 2014.<br/>
+<a href="http://example.com/">An introduction to the art of making up stuff</a> / by F. Scott Fitzgerald. 1928.
+</dd>
+<%
 else
   document_show_fields(document).each do |field_name, field|
     if should_render_show_field? document, field
@@ -28,7 +44,12 @@ else
 -%>
 </dl>
 <hr/>
+<%
+end
+if doctype != "resvlist"
+-%>
 <%= render partial: "show_holdings", locals: {document: document, holdings: holdings} %>
 <%
 end
 %>
+<!-- doctype_s: <%= doctype %> -->
