--- a/app/views/catalog/_show_default.html.erb
+++ b/app/views/catalog/_show_default.html.erb
@@ -1,55 +1,53 @@
 <%# default partial to display solr document fields in catalog show view -%>
 <dl class="dl-horizontal dl-invert">
 <%
-doctype = document["doctype_s"] || "bib"
-holdings = {
-  "onl" => [],
-  "lib" => [],
+labels = {
+  "onl" => render_document_show_field_label(document, field: "onl"),
+  "lib" => render_document_show_field_label(document, field: "lib"),
 }
-if doctype == "flower"
--%>
-<%=
-  render partial: "show_flower", locals: {document: document}
--%>
-<%
-elsif doctype == "resvlist"
-  document_show_fields(document).each do |field_name, field|
-    if should_render_show_field? document, field
--%>
-        <dt class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_label document, field: field_name %></dt>
-        <dd class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_value document, field: field_name %></dd>
-<%
-    end
+library_holdings = [] 
+online_access = []
+document_show_fields(document).each do |field_name, field|
+  if should_render_show_field? document, field
+    if field_name == "lib"
+        library_holdings = document["lib"]
+    elsif field_name == "onl"
+        online_access = document["onl"]
+    else -%>
+      <dt class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_label document, field: field_name %></dt>
+      <dd class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_value document, field: field_name %></dd>
+<%  end
   end
--%>
-<dt>Items:</dt>
-<dd>
-<a href="http://example.com/">Textbook of bad examples</a> / by Ulysses Fishwick. 2014.<br/>
-<a href="http://example.com/">An introduction to the art of making up stuff</a> / by F. Scott Fitzgerald. 1928.
-</dd>
-<%
-else
-  document_show_fields(document).each do |field_name, field|
-    if should_render_show_field? document, field
-      if field_name == "lib" || field_name == "onl"
-        holdings[field_name] = document[field_name]
-      else
--%>
-        <dt class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_label document, field: field_name %></dt>
-        <dd class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_value document, field: field_name %></dd>
-<%
-      end
-    end
-  end
--%>
+end %>
 </dl>
 <hr/>
+<dl class="dl-horizontal dl-invert">
 <%
-end
-if doctype != "resvlist"
--%>
-<%= render partial: "show_holdings", locals: {document: document, holdings: holdings} %>
+if online_access.empty? %>
+           <dt class="blacklight-onl"><%= labels["onl"] %></dt>
+           <dd class="blacklight-onl"><i>No online access</i></dd>
+<% else %>
 <%
-end
+   label = labels["onl"]
+   online_access.each do |v|
+     url, linktext = v.split("|=|")
 %>
-<!-- doctype_s: <%= doctype %> -->
+           <dt class="blacklight-onl"><%= label %></dt>
+           <dd class="blacklight-onl"><a href="<%= url %>"><%= linktext %></a></dd>
+<%   label = ""
+   end %>
+<% end %>
+<% if library_holdings.empty? %>
+           <dt class="blacklight-lib"><%= labels["lib"] %></dt>
+           <dd class="blacklight-lib"><i>None available</i></dd>
+<% else %>
+<%
+   label = labels["lib"]
+   library_holdings.each do |v|
+     inst, loc, callno = v.split("|=|") %>
+           <dt class="blacklight-lib"><%= label %></dt>
+           <dd class="blacklight-lib"><b><%= loc %></b> <%= callno %></dd>
+<%   label = ""
+   end
+end %>
+</dl>
