--- a/app/views/catalog/_show_default.html.erb
+++ b/app/views/catalog/_show_default.html.erb
@@ -1,53 +1,58 @@
 <%# default partial to display solr document fields in catalog show view -%>
 <dl class="dl-horizontal dl-invert">
 <%
-labels = {
-  "onl" => render_document_show_field_label(document, field: "onl"),
-  "lib" => render_document_show_field_label(document, field: "lib"),
-}
 library_holdings = [] 
-online_access = []
+online_holdings = []
 document_show_fields(document).each do |field_name, field|
   if should_render_show_field? document, field
     if field_name == "lib"
         library_holdings = document["lib"]
     elsif field_name == "onl"
-        online_access = document["onl"]
-    else -%>
+        online_holdings = document["onl"]
+    else
+-%>
       <dt class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_label document, field: field_name %></dt>
       <dd class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_value document, field: field_name %></dd>
-<%  end
+<%
+    end
   end
-end %>
+end
+%>
 </dl>
 <hr/>
 <dl class="dl-horizontal dl-invert">
 <%
-if online_access.empty? %>
-           <dt class="blacklight-onl"><%= labels["onl"] %></dt>
-           <dd class="blacklight-onl"><i>No online access</i></dd>
-<% else %>
-<%
-   label = labels["onl"]
-   online_access.each do |v|
-     url, linktext = v.split("|=|")
+onl_label = render_document_show_field_label(document, field: "onl")
+if online_holdings.empty?
 %>
-           <dt class="blacklight-onl"><%= label %></dt>
-           <dd class="blacklight-onl"><a href="<%= url %>"><%= linktext %></a></dd>
-<%   label = ""
-   end %>
-<% end %>
-<% if library_holdings.empty? %>
-           <dt class="blacklight-lib"><%= labels["lib"] %></dt>
-           <dd class="blacklight-lib"><i>None available</i></dd>
-<% else %>
+        <dt class="blacklight-onl"><%= onl_label %></dt>
+        <dd class="blacklight-onl"><i>No online access</i></dd>
 <%
-   label = labels["lib"]
-   library_holdings.each do |v|
-     inst, loc, callno = v.split("|=|") %>
-           <dt class="blacklight-lib"><%= label %></dt>
-           <dd class="blacklight-lib"><b><%= loc %></b> <%= callno %></dd>
-<%   label = ""
-   end
-end %>
+else
+  label = onl_label
+  online_holdings.each do |v|
+%>
+        <dt class="blacklight-onl"><%= label %></dt>
+        <dd class="blacklight-onl"><%= render partial: 'show_online_holdings', locals: { value: v } %></dd>
+<%
+    label = ""
+  end
+end
+lib_label = render_document_show_field_label(document, field: "lib")
+if library_holdings.empty?
+%>
+        <dt class="blacklight-lib"><%= lib_label %></dt>
+        <dd class="blacklight-lib"><i>None available</i></dd>
+<%
+else
+  label = lib_label
+  library_holdings.each do |v|
+%>
+        <dt class="blacklight-lib"><%= label %></dt>
+        <dd class="blacklight-lib"><%= render partial: 'show_library_holdings', locals: { value: v } %></dd>
+<%
+    label = ""
+  end
+end
+%>
 </dl>
