misc. wholesale changes

--- a/app/views/catalog/_show_cres.html.erb
+++ b/app/views/catalog/_show_cres.html.erb
@@ -2,15 +2,14 @@
 <dl class="dl-horizontal dl-invert">
 <!-- This is course reserve list <%= document["id"] %> -->
 <%
-items = document["item_z"].collect{ |i| JSON.parse(i) }
+items  = document["item_z"].collect{ |i| JSON.parse(i) }
 nitems = items ? items.size : 0
-# This next line clumps items together by bib ID, then winnows each clump down
-# to a single item (the first, not that it matters).  To go back to a strictly
-# item-based list, get rid of .group_by and everything after it.
-bibs = items.group_by{ |x| x["bib_id"] }.values.map{ |x| x[0] }
-%>
-<!-- It has <%= nitems %> item(s) in it -->
-<%
+eitems = items.select{ |i| !i["link"].nil? }
+bibs   = items.select{ |i|  i["link"].nil? }.group_by{ |x| x["bib_id"] }.values.map{ |x| x[0] }
+# The previous line groups items (as opposed to e-items) by bib ID, then winnows each group down
+# to a single item (the first, not that it matters).
+
+# First, show metadata (course, instructor, etc.)
 document_show_fields(document).each do |field_name, field|
   if should_render_show_field? document, field
 -%>
@@ -19,21 +18,37 @@ document_show_fields(document).each do |field_name, field|
 <%
   end
 end
+
+# Then list bibs
+if bibs.size > 0
 %>
-    <dt class="blacklight-items">Items:</dt>
-<%
-if nitems > 0
-%>
+    <dt class="blacklight-items">At a library:</dt>
     <dd class="blacklight-items">
-      <ol style="margin-left: 0; padding-left: 10">
 <%
-  bibs.each do |b|
+  bibs.sort{ |x, y| x["title"].downcase <=> y["title"].downcase }.each do |b|
 %>
-      <li style="margin-left: 0; padding-left: 0"><a href="/catalog/b<%= b["bib_id"] %>"><%= b["title"] %></a></li>
+      <p style="padding-left: 2em; text-indent: -2em; margin-bottom: 0"><a href="/catalog/b<%= b["bib_id"] %>"><%= b["title"] %></a></p>
 <%
   end
 %>
-      </ol>
+    </dd>
+<%
+end
+
+# And finally e-items
+if eitems.size > 0
+%>
+    <dt class="blacklight-items">Online:</dt>
+    <dd class="blacklight-items">
+<%
+  eitems.sort{ |x, y| x["title"].downcase <=> y["title"].downcase }.each do |e|
+    title, link = e["title"], e["link"]
+    url, label = link["url"], link["label"]
+%>
+      <p style="padding-left: 2em; text-indent: -2em; margin-bottom: 0"><%= title %><br /><a href="<%= url %>"><%= label %></a></p>
+<%
+  end
+%>
     </dd>
 <%
 end
