--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -1,4 +1,5 @@
-<% if has_search_parameters? %>
+<%
+if has_search_parameters? %>
 <div id="sidebar" class="<%= sidebar_classes %>">
   <%= render 'search_sidebar' %>
 </div>
