remove last remnants of reserves controller

--- a/app/views/catalog/reserves.html.haml
+++ b/app/views/catalog/reserves.html.haml
@@ -1,7 +1,7 @@
 %html
   %body
     %h1 Course reserves
-    %form{ action: "http://lola:3000/" }
+    %form{ action: "/" }
       %input{ name: "q", size: 30 }
       %input{ type: "hidden", name: "f[format][]", value: "cres" }
       %input{ type: "hidden", name: "f[inst_z][]", value: "whe" }
