try to add cres icon

--- a/app/assets/stylesheets/blacklight.css.scss
+++ b/app/assets/stylesheets/blacklight.css.scss
@@ -3,3 +3,11 @@
 @import 'bootstrap';
 
 @import 'blacklight/blacklight';
+
+.blacklight-cres > h1:before {
+    content:url(image-url("cres.png"));
+}
+
+#document.blacklight-cres:before {
+    content:url(image-url("cres.png"));
+}
