bib, cres: link to cres if on reserve

--- a/app/views/catalog/_show_library_holdings.html.erb
+++ b/app/views/catalog/_show_library_holdings.html.erb
@@ -29,14 +29,24 @@ end
 items.each do |item|
   tloc = item["temp_loc"]
   stat = item["status"]
+  cres = item["reserves"]
   if tloc and tloc != loc %>
-<br/><span style="padding-left: 2em"><img width="12" height="12" src="/images/temploc.png"/>Temporarily at <b><%= render_location_value(tloc) %></b></span>
+<br/><span style="margin-left: 2em"><img width="12" height="12" src="/images/temploc.png"/>Temporarily at <b><%= render_location_value(tloc) %></b></span>
 <%
   end
   if stat and stat != 1
 %>
-<br/><span class="item-status" style="margin-left: 2.5em"><%= render_item_status(item) %></span>
+<br/><span class="item-status" style="margin-left: 2em"><%= render_item_status(item) %></span>
 <%
+  end
+  if cres and cres.size
+    cres.uniq.each do |c|
+      if !c['title'].nil?
+%>
+        <br/><span style="padding-left: 2em">On reserve for</span> <a href="/catalog/<%= c['id'] %>"><%= c['title'] %></a> 
+<%
+      end
+    end
   end
 end
 %>
