--- a/app/views/catalog/_previous_next_doc.html.erb
+++ b/app/views/catalog/_previous_next_doc.html.erb
@@ -1,11 +1,18 @@
 <% #Using the Bootstrap Pagination class  -%>
 <% #DEPRECATED - using id="previousNextDocument" as a selector is deprecated and will be removed in Blacklight 6.0 %>
 <div id='previousNextDocument' class='pagination-search-widgets'>
-  <% if @previous_document || @next_document %>
+  <% if @previous_document || @next_document
+  dtype = @previous_document ? @previous_document[:doctype] : @next_document[:doctype] || "bib"
+  sfx = dtype == "cres" ? " courses" : ""
+  %>
     <div class="page_links">
       <%= link_to_previous_document @previous_document %> |
+    <% if dtype == "cres" %>
+        <img src="http://blacklight.flo.org/assets/cres.png" height="24" width="24" />
+    <% end %>
 
-      <%= item_page_entry_info %> |
+      <%= item_page_entry_info %><%= sfx %>
+      |
 
       <%= link_to_next_document @next_document %>
     </div>
@@ -13,7 +20,7 @@
   <% if current_search_session %>
     <div class="pull-right search-widgets">
       <%= link_back_to_catalog class: 'btn' %>
-      <%#link_to t('blacklight.search.start_over'), start_over_path(current_search_session.try(:query_params) || {}), id: 'startOverLink', class: 'btn' %>
+
     </div>
   <% end %>
 </div>
