add abbrev-based redirects

--- a/app/views/catalog/_show_library_holdings.html.erb
+++ b/app/views/catalog/_show_library_holdings.html.erb
@@ -40,7 +40,7 @@ end
 <%
 if items.count{ |i| i["rendered_status"] != "" || ! i["temp_loc"].nil? } > 0
 %>
-<ol style="margin-left: 2em; margin-top: 0; margin-bottom: 0">
+<ul style="margin-left: 2em; margin-top: 0; margin-bottom: 0">
 <%
   items.each do |item|
     tloc = item["temp_loc"]
@@ -83,7 +83,7 @@ Available
     end
   end
 %>
-</ol>
+</ul>
 <%
 end
 %>
