main page: restore facets, change blurb

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,8 +1,17 @@
 <div class="page-header row">
-  <h1 class="col-md-8 page-heading"><%= t('blacklight.welcome') %></h1>
+  <h1 class="col-md-8 page-heading">Course reserves</h1>
 </div>
 
 <div id="getting-started">
-  <p><img src="/assets/bib.png" style="margin: 0 1em"/><a href="/?f[doctype][]=bib">Catalog</a></p>
-  <p><img src="/assets/cres.png" style="margin: 0 1em"/><a href="/?f[doctype][]=cres">Course reserves</a></p>
+<p>
+To find your course reserves, use the search box to search by instructor name,
+course name or number, or department, or by the author or title of an item on
+reserve.  You can mix and match words from any of these things.  For example:
+</p>
+<p style="margin-left: 2em">
+<b>gleason folk music</b>
+</p>
+<p>
+Alternatively, you can browse reserve lists by Institution, Department, or Instructor using the search limits to the left.
+</p>
 </div>
