--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@ $logo_image: 'flo-logo-transp.png';
     white-space: nowrap;
     overflow: hidden;
     padding-right:0;
+    margin-left:-3px;
     margin-right:20px;
     padding-left: 0;
   }
